test/semantic_error/se_rv_arr_def.c0
int while[5];
int f(){}
